# Paperbase

./: CMakeLists.txt  LICENSE  README.md  app_icon.rc  index.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  paper.h
bibliography/: bibliography.cpp  bibliography.h
core/: paper_manager.h
docs/: index.md
filesystem/: pdf_utils.h
resources/: app_icon.rc  resources.qrc
storage/: json_utils.cpp  json_utils.h
